[package]
authors.workspace = true
description = "The foundation tools to build Nushell commands."
edition.workspace = true
license.workspace = true
name = "nu-cmd-base"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-base"
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
nu-engine.workspace = true
nu-parser.workspace = true
nu-path.workspace = true
nu-protocol.workspace = true

indexmap = { workspace = true }
miette = { workspace = true }
