[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's dataframe commands based on polars."
edition = "2021"
license = "MIT"
name = "nu-cmd-dataframe"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-dataframe"
version = "0.89.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.89.1" }
nu-parser = { path = "../nu-parser", version = "0.89.1" }
nu-protocol = { path = "../nu-protocol", version = "0.89.1" }

# Potential dependencies for extras
chrono = { version = "0.4", features = ["std", "unstable-locales"], default-features = false }
chrono-tz = "0.8"
fancy-regex = "0.12"
indexmap = { version = "2.1" }
num = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
sqlparser = { version = "0.43", optional = true }
polars-io = { version = "0.36", features = ["avro"], optional = true }
polars-arrow = { version = "0.37", optional = true }
polars-ops = { version = "0.36", optional = true }
polars-plan = { version = "0.36", optional = true }
polars-utils = { version = "0.36", optional = true }

[dependencies.polars]
features = [
	"arg_where",
	"checked_arithmetic",
	"concat_str",
	"cross_join",
	"csv",
	"cum_agg",
	"default",
	"dtype-categorical",
	"dtype-datetime",
	"dtype-struct",
	"dtype-i8",
	"dtype-i16",
	"dtype-u8",
	"dtype-u16",
	"dynamic_group_by",
	"ipc",
	"is_in",
	"json",
	"lazy",
	"object",
	"parquet",
	"random",
	"rolling_window",
	"rows",
	"serde",
	"serde-lazy",
	"strings",
	"to_dummies",
]
optional = true
version = "0.36"

[features]
dataframe = ["num", "polars", "polars-io", "polars-arrow", "polars-ops", "polars-plan", "polars-utils", "sqlparser"]
default = []

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.89.1" }
nu-test-support = { path = "../nu-test-support", version = "0.89.1" }
