[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's extra commands that are not part of the 1.0 api standard."
edition.workspace = true
license = "MIT"
name = "nu-cmd-extra"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-extra"
rust-version.workspace = true
version = "0.112.0"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
harness = false

[lints]
workspace = true

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[dependencies]
nu-cmd-base = { path = "../nu-cmd-base", version = "0.112.0" }
nu-engine = { path = "../nu-engine", version = "0.112.0", default-features = false }
nu-json = { version = "0.112.0", path = "../nu-json" }
nu-parser = { path = "../nu-parser", version = "0.112.0" }
nu-pretty-hex = { version = "0.112.0", path = "../nu-pretty-hex" }
nu-protocol = { path = "../nu-protocol", version = "0.112.0", default-features = false }
nu-utils = { path = "../nu-utils", version = "0.112.0", default-features = false }

# Potential dependencies for extras
heck = { workspace = true }
num-traits = { workspace = true }
nu-ansi-term = { workspace = true }
fancy-regex = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
v_htmlescape = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }

[dev-dependencies]
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.112.0" }
nu-command = { path = "../nu-command", version = "0.112.0" }
nu-test-support = { path = "../nu-test-support", version = "0.112.0" }

[build-dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.112.0", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
