[package]
authors.workspace = true
description = "Nushell's extra commands that are not part of the 1.0 api standard."
edition.workspace = true
license.workspace = true
name = "nu-cmd-extra"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-extra"
rust-version.workspace = true
version.workspace = true
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
harness = false

[lints]
workspace = true

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[dependencies]
nu-cmd-base.workspace = true
nu-engine.workspace = true
nu-heavy-utils.workspace = true
nu-json.workspace = true
nu-parser.workspace = true
nu-pretty-hex.workspace = true
nu-protocol.workspace = true
nu-utils.workspace = true

# Potential dependencies for extras
heck = { workspace = true }
num-traits = { workspace = true }
nu-ansi-term = { workspace = true }
fancy-regex = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
v_htmlescape = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }

[dev-dependencies]
# "os" feature required for testing examples
nu-cmd-lang = { workspace = true, features = ["os"] }
nu-command = { workspace = true, features = ["os"] }
nu-test-support.workspace = true

[build-dependencies]
nu-protocol.workspace = true

serde = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
