[package]
authors = ["The Nushell Project Developers"]
build = "build.rs"
description = "Nushell's core language commands"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-lang"
edition = "2021"
license = "MIT"
name = "nu-cmd-lang"
version = "0.103.1"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.103.1", default-features = false }
nu-parser = { path = "../nu-parser", version = "0.103.1" }
nu-protocol = { path = "../nu-protocol", version = "0.103.1", default-features = false }
nu-utils = { path = "../nu-utils", version = "0.103.1", default-features = false }

itertools = { workspace = true }
shadow-rs = { version = "1.1", default-features = false }

[build-dependencies]
shadow-rs = { version = "1.1", default-features = false, features = ["build"] }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[features]
default = ["os"]
os = [
  "nu-engine/os",
  "nu-protocol/os",
  "nu-utils/os",
]
plugin = [
  "nu-protocol/plugin",
  "os",
]

trash-support = []
sqlite = []
static-link-openssl = []
system-clipboard = []
