[package]
authors = ["The Nushell Project Developers"]
build = "build.rs"
description = "Nushell's core language commands"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-lang"
edition = "2024"
license = "MIT"
name = "nu-cmd-lang"
version = "0.106.2"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.106.2", default-features = false }
nu-experimental = { path = "../nu-experimental", version = "0.106.2" }
nu-parser = { path = "../nu-parser", version = "0.106.2" }
nu-protocol = { path = "../nu-protocol", version = "0.106.2", default-features = false }
nu-utils = { path = "../nu-utils", version = "0.106.2", default-features = false }
nu-cmd-base = { path = "../nu-cmd-base", version = "0.106.2" }

itertools = { workspace = true }
shadow-rs = { version = "1.2", default-features = false }

[build-dependencies]
shadow-rs = { version = "1.2", default-features = false, features = ["build"] }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
miette = { workspace = true }

[features]
default = ["os"]
os = [
  "nu-engine/os",
  "nu-protocol/os",
  "nu-utils/os",
]
plugin = [
  "nu-protocol/plugin",
  "os",
]
