[package]
authors = ["The Nushell Project Developers"]
description = "Commands for managing Nushell plugins."
edition.workspace = true
license = "MIT"
name = "nu-cmd-plugin"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-plugin"
rust-version.workspace = true
version = "0.112.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
nu-engine = { path = "../nu-engine", version = "0.112.0" }
nu-path = { path = "../nu-path", version = "0.112.0" }
nu-protocol = { path = "../nu-protocol", version = "0.112.0", features = ["plugin"] }
nu-plugin-engine = { path = "../nu-plugin-engine", version = "0.112.0" }

itertools = { workspace = true }
