[package]
authors.workspace = true
description = "Commands for managing Nushell plugins."
edition.workspace = true
license.workspace = true
name = "nu-cmd-plugin"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-plugin"
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
nu-engine.workspace = true
nu-path.workspace = true
nu-protocol = { workspace = true, features = ["plugin"] }
nu-plugin-engine.workspace = true

itertools = { workspace = true }
