[package]
authors = ["The Nushell Project Developers"]
description = "Color configuration code used by Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-color-config"
edition = "2021"
license = "MIT"
name = "nu-color-config"
version = "0.89.1"

[lib]
bench = false

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.89.1" }
nu-ansi-term = "0.50.0"
nu-utils = { path = "../nu-utils", version = "0.89.1" }
nu-engine = { path = "../nu-engine", version = "0.89.1" }
nu-json = { path = "../nu-json", version = "0.89.1" }

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
nu-test-support = { path = "../nu-test-support", version = "0.89.1" }
