[package]
authors = ["The Nushell Project Developers"]
description = "Color configuration code used by Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-color-config"
edition = "2024"
license = "MIT"
name = "nu-color-config"
version = "0.105.2"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.105.2", default-features = false }
nu-engine = { path = "../nu-engine", version = "0.105.2", default-features = false }
nu-json = { path = "../nu-json", version = "0.105.2" }
nu-ansi-term = { workspace = true }

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
nu-test-support = { path = "../nu-test-support", version = "0.105.2" }
