[package]
authors.workspace = true
description = "Color configuration code used by Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-color-config"
edition.workspace = true
license.workspace = true
name = "nu-color-config"
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
harness = false

[lints]
workspace = true

[dependencies]
nu-protocol.workspace = true
nu-engine.workspace = true
nu-json.workspace = true
nu-ansi-term.workspace = true

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
nu-test-support.workspace = true
