[package]
authors = ["The Nu Project Contributors"]
description = "Completions for nushell"
edition = "2018"
license = "MIT"
name = "nu-completion"
version = "0.32.1"

[lib]
doctest = false

[dependencies]
nu-data = { version = "0.32.1", path = "../nu-data" }
nu-engine = { version = "0.32.1", path = "../nu-engine" }
nu-errors = { version = "0.32.1", path = "../nu-errors" }
nu-parser = { version = "0.32.1", path = "../nu-parser" }
nu-protocol = { version = "0.32.1", path = "../nu-protocol" }
nu-source = { version = "0.32.1", path = "../nu-source" }
nu-test-support = { version = "0.32.1", path = "../nu-test-support" }

directories-next = { version = "2.0.0", optional = true }
dirs-next = { version = "2.0.0", optional = true }
indexmap = { version = "1.6.1", features = ["serde-1"] }
rustyline = { version = "8.1.0", optional = true }

[features]
rustyline-support = ["rustyline", "nu-engine/rustyline-support"]
dirs = ["dirs-next"]
directories = ["directories-next"]
