[package]
authors = ["The Nu Project Contributors"]
description = "Completions for nushell"
edition = "2018"
license = "MIT"
name = "nu-completion"
version = "0.37.1"

[lib]
doctest = false

[dependencies]
nu-engine = { version = "0.37.1", path="../nu-engine" }
nu-data = { version = "0.37.1", path="../nu-data" }
nu-parser = { version = "0.37.1", path="../nu-parser" }
nu-path = { version = "0.37.1", path="../nu-path" }
nu-protocol = { version = "0.37.1", path="../nu-protocol" }
nu-source = { version = "0.37.1", path="../nu-source" }
nu-test-support = { version = "0.37.1", path="../nu-test-support" }
indexmap = { version="1.6.1", features=["serde-1"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
is_executable = "1.0.1"

[dev-dependencies]
parking_lot = "0.11.1"
