[package]
name = "nu-completions"
version = "0.14.1"
authors = ["The Nu Project Contributors"]
description = "Completion engine for nushell"
edition = "2018"
license = "MIT"

[lib]
doctest = false

[dependencies]
nu-source = { version = "0.14.1", path = "../nu-source" }
nu-parser = { version = "0.14.1", path = "../nu-parser" }
nu-protocol = { version = "0.14.1", path = "../nu-protocol" }

derive-new = "0.5.8"
ichwh = "0.3.4"
indexmap = "1.3.2"
rustyline = "6.1.2"

[build-dependencies]
nu-build = { version = "0.14.1", path = "../nu-build" }

[features]
stable = []
