[package]
authors = ["The Nu Project Contributors"]
description = "CLI for nushell"
edition = "2018"
license = "MIT"
name = "nu-completions"
version = "0.20.0"

[lib]
doctest = false

[dependencies]
nu-data = {version = "0.20.0", path = "../nu-data"}
nu-errors = {version = "0.20.0", path = "../nu-errors"}
nu-parser = {version = "0.20.0", path = "../nu-parser"}
nu-protocol = {version = "0.20.0", path = "../nu-protocol"}
nu-source = {version = "0.20.0", path = "../nu-source"}

dirs = {version = "3.0.1", optional = true}
indexmap = {version = "1.6.0", features = ["serde-1"]}
rustyline = {version = "6.3.0", optional = true}

[features]
rustyline-support = ["rustyline"]
